Fix too wide columns in People's table

--- a/src/app/components/database/database-people/database-people.component.scss
+++ b/src/app/components/database/database-people/database-people.component.scss
@@ -39,3 +39,12 @@ mat-spinner {
   margin: 0 auto;
   top: 10rem;
 }
+.mat-column-editButton {
+  width: 100px;
+  text-align: center;
+}
+
+.mat-column-deleteButton {
+  width: 100px;
+  text-align: center;
+}
